acvus-mir-test/tests/snapshots/script__loop_context_write_phi.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @count
     1 │   r1 = context_load r0
     2 │   r2 = context_project @items
     3 │   r3 = context_load r2
     4 │   r4 = cast ListToIterator r3
     5 │   jump L0(r4, r1, r5)
     6 │ L0(r6: Iterator<Int>, r7: <error>, r8: Int):
     7 │   r9 = context_project @count
     8 │   ctx_store r9 = r7
     9 │   iter_step r10, r11 = r6 else L1()
    10 │ L2:
    11 │   var_store x = r10
    12 │   r12 = context_project @count
    13 │   r13 = context_load r12
    15 │   r14 = r13 + 1 (r15)
    16 │   jump L0(r11, r14, r10)
    17 │ L1:
    18 │   r16 = context_project @count
    19 │   r17 = context_load r16
    20 │   return r17

    ; r0 (@count) : <error>
    ; r1 (v1) : Int
    ; r2 (@items) : <error>
    ; r3 (v3) : List<Int>
    ; r4 (v6) : Iterator<Int>
    ; r5 (v17) : Int
    ; r6 (v7) : Iterator<Int>
    ; r7 (v18) : <error>
    ; r8 (v19) : Int
    ; r9 (v20) : <error>
    ; r10 (x) : Int
    ; r11 (v9) : Iterator<Int>
    ; r12 (@count) : Int
    ; r13 (v11) : Int
    ; r14 (v13) : Int
    ; r15 (v12) : Int
    ; r16 (@count) : Int
    ; r17 (v16) : Int
    ; r18 (v14) : Int
    ; r19 (@items) : List<Int>
    ; r20 (v5) : List<Int>
