acvus-mir-test/tests/snapshots/script__loop_nested_iteration.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @matrix
     1 │   r1 = context_load r0
     2 │   r2 = context_project @sum
     3 │   r3 = context_load r2
     4 │   r4 = cast ListToIterator r1
     5 │   jump L0(r4, r3, r5, r6)
     6 │ L0(r7: Iterator<List<Int>>, r8: <error>, r9: Int, r10: List<Int>):
     7 │   r11 = context_project @sum
     8 │   ctx_store r11 = r8
     9 │   iter_step r12, r13 = r7 else L1()
    10 │ L2:
    11 │   r14 = cast ListToIterator r12
    12 │   jump L3(r14, r8, r9)
    13 │ L3(r15: Iterator<Int>, r16: <error>, r17: Int):
    14 │   r18 = context_project @sum
    15 │   ctx_store r18 = r16
    16 │   iter_step r19, r20 = r15 else L4()
    17 │ L5:
    18 │   r21 = context_project @sum
    19 │   r22 = context_load r21
    20 │   r23 = r22 + r19
    21 │   jump L3(r20, r23, r19)
    22 │ L4:
    23 │   jump L0(r13, r16, r17, r12)
    24 │ L1:
    25 │   r24 = context_project @sum
    26 │   r25 = context_load r24
    27 │   return r25

    ; r0 (@matrix) : <error>
    ; r1 (v1) : List<List<Int>>
    ; r2 (@sum) : <error>
    ; r3 (v3) : Int
    ; r4 (v6) : Iterator<List<Int>>
    ; r5 (v22) : Int
    ; r6 (v23) : List<Int>
    ; r7 (v7) : Iterator<List<Int>>
    ; r8 (v24) : <error>
    ; r9 (v26) : Int
    ; r10 (v28) : List<Int>
    ; r11 (v30) : <error>
    ; r12 (row) : List<Int>
    ; r13 (v9) : Iterator<List<Int>>
    ; r14 (v11) : Iterator<Int>
    ; r15 (v12) : Iterator<Int>
    ; r16 (v25) : <error>
    ; r17 (v27) : Int
    ; r18 (v31) : <error>
    ; r19 (x) : Int
    ; r20 (v14) : Iterator<Int>
    ; r21 (@sum) : Int
    ; r22 (v16) : Int
    ; r23 (v18) : Int
    ; r24 (@sum) : Int
    ; r25 (v21) : Int
    ; r26 (x) : Int
    ; r27 (v5) : List<List<Int>>
    ; r28 (@matrix) : List<List<Int>>
    ; r29 (row) : List<Int>
    ; r30 (v19) : Int
