acvus-mir-test/tests/snapshots/script__loop_range_iteration.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = undef
     1 │   r1 = context_project @sum
     2 │   r2 = context_load r1
     5 │   r3 = range 0 (r4)..10 (r5)
     6 │   r6 = cast RangeToList r3
     8 │   jump L0(0 (r7), r2, r0)
     9 │ L0(r8: Int, r9: Int, r10: Int):
    10 │   r11 = context_project @sum
    11 │   ctx_store r11 = r9
    12 │   list_step r12, r13 = r6[r8] else L1()
    13 │ L2:
    14 │   r14 = context_project @sum
    15 │   r15 = context_load r14
    16 │   r16 = r15 + r12
    17 │   jump L0(r13, r16, r12)
    18 │ L1:
    19 │   r17 = context_project @sum
    20 │   r18 = context_load r17
    21 │   return r18

    ; r0 (v18) : Int
    ; r1 (@sum) : Int
    ; r2 (v2) : Int
    ; r3 (v5) : Range
    ; r4 (v3) : Int
    ; r5 (v4) : Int
    ; r6 (v6) : List<Int>
    ; r7 (v7) : Int
    ; r8 (v8) : Int
    ; r9 (v19) : Int
    ; r10 (v20) : Int
    ; r11 (v21) : Int
    ; r12 (x) : Int
    ; r13 (v10) : Int
    ; r14 (@sum) : Int
    ; r15 (v12) : Int
    ; r16 (v14) : Int
    ; r17 (@sum) : Int
    ; r18 (v17) : Int
    ; r19 (v15) : Int
    ; r20 (x) : Int
