acvus-mir-test/tests/snapshots/script__loop_simple_iteration.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     2 │   r2 = context_project @sum
     3 │   r3 = context_load r2
     4 │   r4 = cast ListToIterator r1
     5 │   jump L0(r4, r3, r5)
     6 │ L0(r6: Iterator<Int>, r7: <error>, r8: Int):
     7 │   r9 = context_project @sum
     8 │   ctx_store r9 = r7
     9 │   iter_step r10, r11 = r6 else L1()
    10 │ L2:
    11 │   r12 = context_project @sum
    12 │   r13 = context_load r12
    13 │   r14 = r13 + r10
    14 │   jump L0(r11, r14, r10)
    15 │ L1:
    16 │   r15 = context_project @sum
    17 │   r16 = context_load r15
    18 │   return r16

    ; r0 (@items) : <error>
    ; r1 (v1) : List<Int>
    ; r2 (@sum) : <error>
    ; r3 (v3) : Int
    ; r4 (v6) : Iterator<Int>
    ; r5 (v17) : Int
    ; r6 (v7) : Iterator<Int>
    ; r7 (v18) : <error>
    ; r8 (v19) : Int
    ; r9 (v20) : <error>
    ; r10 (x) : Int
    ; r11 (v9) : Iterator<Int>
    ; r12 (@sum) : Int
    ; r13 (v11) : Int
    ; r14 (v13) : Int
    ; r15 (@sum) : Int
    ; r16 (v16) : Int
    ; r17 (v14) : Int
    ; r18 (@items) : List<Int>
    ; r19 (v5) : List<Int>
    ; r20 (x) : Int
