acvus-mir-test/tests/snapshots/script__loop_with_function_call.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @items
     1 │   r1 = context_load r0
     2 │   r2 = context_project @result
     3 │   r3 = context_load r2
     4 │   r4 = cast ListToIterator r1
     5 │   jump L0(r4, r3)
     6 │ L0(r5: Iterator<Int>, r6: <error>):
     7 │   r7 = context_project @result
     8 │   ctx_store r7 = r6
     9 │   iter_step r8, r9 = r5 else L1()
    10 │ L2:
    11 │   r10 = context_project @result
    12 │   r11 = context_load r10
    13 │   r12 = poison
    14 │   r13 = r11 + r12
    15 │   jump L0(r9, r13)
    16 │ L1:
    17 │   r14 = context_project @result
    18 │   r15 = context_load r14
    19 │   return r15

    ; r0 (@items) : <error>
    ; r1 (v1) : List<Int>
    ; r2 (@result) : <error>
    ; r3 (v3) : String
    ; r4 (v6) : Iterator<Int>
    ; r5 (v7) : Iterator<Int>
    ; r6 (v17) : <error>
    ; r7 (v18) : <error>
    ; r8 (x) : Int
    ; r9 (v9) : Iterator<Int>
    ; r10 (@result) : String
    ; r11 (v11) : String
    ; r12 (to_string(...)) : String
    ; r13 (v13) : String
    ; r14 (@result) : String
    ; r15 (v16) : String
    ; r16 (v14) : String
    ; r17 (@items) : List<Int>
    ; r18 (v5) : List<Int>
