acvus-mir-test/tests/snapshots/script__ssa_multiple_contexts.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @a
     1 │   r1 = context_load r0
     2 │   r2 = context_project @b
     3 │   r3 = context_load r2
     5 │   r4 = r1 + 1 (r5)
     6 │   r6 = context_project @a
     7 │   ctx_store r6 = r4
     9 │   r7 = r3 + 2 (r8)
    10 │   r9 = context_project @b
    11 │   ctx_store r9 = r7
    12 │   r10 = r4 + r7
    13 │   return r10

    ; r0 (@a) : <error>
    ; r1 (v1) : Int
    ; r2 (@b) : <error>
    ; r3 (v3) : Int
    ; r11 (@a) : Int
    ; r12 (v5) : Int
    ; r5 (v6) : Int
    ; r4 (v7) : Int
    ; r6 (v8) : Int
    ; r13 (@b) : Int
    ; r14 (v10) : Int
    ; r8 (v11) : Int
    ; r7 (v12) : Int
    ; r9 (v13) : Int
    ; r15 (@a) : Int
    ; r16 (v15) : Int
    ; r17 (@b) : Int
    ; r18 (v17) : Int
    ; r10 (v18) : Int
