acvus-mir-test/tests/snapshots/script__ssa_store_load_forwarding.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @x
     1 │   r1 = context_load r0
     3 │   r2 = context_project @x
     4 │   ctx_store r2 = 42 (r3)
     5 │   return 42 (r3)

    ; r0 (@x) : <error>
    ; r1 (v1) : Int
    ; r3 (v2) : Int
    ; r2 (v3) : Int
    ; r4 (@x) : Int
    ; r5 (v5) : Int
