acvus-mir-test/tests/snapshots/script__ssa_write_in_branch_phi.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = context_project @cond
     1 │   r1 = context_load r0
     2 │   r2 = context_project @x
     3 │   r3 = context_load r2
     4 │   r4 = test r1 == 42
     5 │   jump_if r4 then L0 else L1(r3)
     6 │ L0:
     8 │   jump L1(1 (r5))
     9 │ L1(r6: Int):
    10 │   r7 = context_project @x
    11 │   ctx_store r7 = r6
    12 │   return r6

    ; r0 (@cond) : <error>
    ; r1 (v1) : Int
    ; r2 (@x) : <error>
    ; r3 (v3) : Int
    ; r8 (@cond) : Int
    ; r9 (v5) : Int
    ; r4 (v6) : Bool
    ; r5 (v7) : Int
    ; r10 (v8) : Int
    ; r11 (@x) : Int
    ; r12 (v10) : Int
    ; r6 (v11) : Int
    ; r7 (v12) : Int
