acvus-mir-test/tests/snapshots/script__ssa_write_in_loop_phi.snap
---
source: acvus-mir-test/tests/script.rs
expression: ir
---
=== main ===
     0 │   r0 = undef
     1 │   r1 = ref @acc
     2 │   r2 = ref @acc
     3 │   r3 = load r2
     4 │   r4 = ref @items
     5 │   r5 = load r4
     6 │   r6 = ref @items
     8 │   jump L0(0 (r7), r3, r0)
     9 │ L0(r8: Int, r9: Int, r10: Int):
    10 │   store r1 = r9
    11 │   list_step r11, r12 = r5[r8] else L1()
    12 │ L2:
    13 │   r13 = ref @acc
    14 │   r14 = r9 + r11
    15 │   jump L0(r12, r14, r11)
    16 │ L1:
    17 │   r15 = ref @acc
    18 │   return r9

    ; r0 (v21) : Int
    ; r1 (v24) : Ref<Int>
    ; r2 (@acc) : Ref<Int>
    ; r3 (@acc) : Int
    ; r4 (@items) : Ref<List<Int>>
    ; r5 (@items) : List<Int>
    ; r6 (@items) : Ref<List<Int>>
    ; r7 (v7) : Int
    ; r8 (v8) : Int
    ; r9 (v22) : Int
    ; r10 (v23) : Int
    ; r11 (x) : Int
    ; r12 (v10) : Int
    ; r13 (@acc) : Ref<Int>
    ; r14 (v17) : Int
    ; r15 (@acc) : Ref<Int>
    ; r16 (v14) : Int
    ; r17 (v6) : List<Int>
    ; r18 (v20) : Int
    ; r19 (v15) : Ref<Int>
    ; r20 (@acc) : Ref<Int>
    ; r21 (v12) : Ref<Int>
    ; r22 (x) : Int
